[package]
name = "aesloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "*", features = ["Win32_System_LibraryLoader","Win32_Foundation","Win32_Globalization","Win32_System_Diagnostics_ToolHelp"] }
libaes = "0.6.1"
base64 = "0.13.0"
obfstr = "*"

[profile.release]
lto = true
opt-level = "z"               # 使用稍高一些的优化级别，最低是0，最高是3
overflow-checks = false
strip = "symbols"
codegen-units = 1
panic = 'abort'

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
