[package]
name = "rsloader"
version = "0.1.0"
edition = "2021"


[dependencies.windows]
version = "0.32.0"
features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Globalization",
]
[dependencies]
base64 = "0.13.0"


[profile.release]
lto = true
opt-level = "z"               # 使用稍高一些的优化级别，最低是0，最高是3
overflow-checks = false
strip = "symbols"
codegen-units = 1
panic = 'abort'
