[package]
name = "bird2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.38.0",features = ["Win32_System_Memory","Win32_System_LibraryLoader","Win32_System_Threading","Win32_Foundation"]}
libaes = "0.6.1"
base64 = "0.13.0"
obfstr = "0.3.0"


[profile.release]
lto = true
opt-level = "z"               # 使用稍高一些的优化级别，最低是0，最高是3
overflow-checks = false
strip = "symbols"
codegen-units = 1
panic = 'abort'