[package]
name = "embed-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="6.4.0"

[build-dependencies]
embed-resource =  "*"

[profile.release]
lto = true
opt-level = "z"               # 使用稍高一些的优化级别，最低是0，最高是3
overflow-checks = false
strip = "symbols"
codegen-units = 1
panic = 'abort'

